fix noscript + dark mode display

--- a/src/styles/noscript.css
+++ b/src/styles/noscript.css
@@ -4,6 +4,10 @@ body {
   opacity: 1 !important;
   --bg: #fff5f6;
   --fill: #ffbac1;
+  @media (prefers-color-scheme: dark) {
+    --bg: var(--color-dark);
+    --text: var(--color-light);
+  }
 }
 
 hero-header {
